homecluster/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    nginx.org/server-snippets: |
      location / {
        proxy_set_header X-Forwarded-For $host;
        proxy_set_header X-Forwarded-Proto $scheme;
      }
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: keycloak
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - keycloak.mgsds.com
    secretName: keycloak-tls
  rules:
  - host: keycloak.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sso-mgsds-kc-service
            port:
              number: 8443
